# simple_template_copy

./: .gitignore  .pypirc  LICENSE  core.py  devNote.md  docopt_wrapper.py  find_template_dir_logic.dot  fire_cli.py  linktest  pyproject.toml  readMe.md  setup.py
src/: core.py  docopt-test.py  docopt_w.py  tempy.py
src/simple_template_copy/: __init__.py  core.py  docopt_w.py  docopt_wrapper.py
tmp/: core_flow_chart.dot
