[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "tempy"
authors = [{name = "gl", email = "1404919041@qq.com"}]
readme = "readMe.md"
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/ZX1209/simple_template_copy"
