[build-system]
requires = [
  "setuptools>=42",
  "wheel",
]

build-backend = "setuptools.build_meta"

[project]
authors = [{name = "gl", email = "1404919041@qq.com"}]
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
name = "tempy"
readme = "readMe.md"

[project.urls]
Home = "https://github.com/ZX1209/simple_template_copy"
